# trust-no-1

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DATABASE_ARCHITECTURE.md  DEPENDENCIES.md  NETWORKING_GUIDE.md  README.md  docker-compose.yml  run_client.sh  stop_all.sh  test_multiplayer.sh  test_multiplayer_fixed.sh
.cargo/: config.toml
crates/tn1_client/: Cargo.toml
crates/tn1_client/src/: camera.rs  input.rs  input_sender.rs  main.rs  networking.rs  physics.rs  player.rs  player_tags.rs  position_receiver.rs  ui.rs
crates/tn1_server/: Cargo.toml
crates/tn1_server/src/: database.rs  main.rs  networking.rs  physics.rs  systems.rs  world.rs
crates/tn1_shared/: Cargo.toml
crates/tn1_shared/src/: components.rs  constants.rs  events.rs  lib.rs  protocol.rs
database/: schema.sql
docs/ARCHITECTURE/: BEVY_ARCHITECTURE.md  GAME_ARCHITECTURE.md  NETWORKING_ARCHITECTURE.md
docs/SYSTEMS/: BALLISTICS_SYSTEM.md  INVENTORY_SYSTEM.md  MEDICAL_SYSTEM.md  WEAPONS_SYSTEM.md
