[workspace]
resolver = "2"
members = [
    "crates/tn1_shared",
    "crates/tn1_client", 
    "crates/tn1_server",
]

[workspace.dependencies]
# Core
bevy = "0.15"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
bevy_replicon = "0.28"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Physics
bevy_rapier3d = "0.28"
rapier3d = "0.22"

# Common
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"