[package]
name = "tn1_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trust-no-1"
path = "src/main.rs"

[dependencies]
# Workspace
tn1_shared = { path = "../tn1_shared" }

# Core
bevy = { workspace = true, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_asset",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "jpeg",
    "bevy_state",
    "bevy_gizmos",
    "wayland",
    "x11",
    "bevy_sprite",
    "bevy_core_pipeline",
    "tonemapping_luts",
    "webgl2",
    "default_font",
]}

# Networking
bevy_replicon = { workspace = true, features = ["client"] }

# Physics
bevy_rapier3d = { workspace = true, features = ["debug-render"] }

# UI
bevy_egui = "0.31"

# Input
leafwing-input-manager = "0.16"

# Audio
bevy_kira_audio = { version = "0.21", features = ["ogg"] }

# Utils
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
serde_json = "1.0.140"

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking"]
