[package]
name = "tn1_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tn1-server"
path = "src/main.rs"

[dependencies]
# Workspace
tn1_shared = { path = "../tn1_shared" }

# Core
bevy = { workspace = true, default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "multi_threaded",
    "serialize",
    "bevy_state",
]}

# Networking
bevy_replicon = { workspace = true, features = ["server"] }
quinn = "0.11"
tokio = { version = "1.40", features = ["full"] }

# Physics
bevy_rapier3d = { workspace = true }

# Database (futuro)
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
# redis = { version = "0.27", features = ["tokio-comp"] }

# Utils
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = "6.1"
serde_json = "1.0.140"

[features]
default = []
