[package]
name = "tn1_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, default-features = false, features = ["serialize"] }
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []